# Curb-IQ

./: .dockerignore  .gitignore  Dockerfile  INSTRUCTIONS.md  LICENSE  Makefile  PITCH.md  README.md  SUBMISSION.md  build_all.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  run.bat  run.sh
curbiq/: __init__.py  artifacts.py  calibration.py  config.py  congestion.py  emergence.py  enrich.py  fairness.py  features.py  forecast.py  hotspots.py  patrol.py  prioritize.py  scenario.py  spatial.py  timing.py  validate_geo.py
curbiq/api/: __init__.py  main.py
curbiq/cv/: __init__.py  detector.py  geofence.py  pipeline.py  tracker.py
curbiq/etl/: __init__.py  pipeline.py
data/artifacts/: cells.json  emerging.json  fairness.json  forecast.json  geo-validation.json  kpis.json  manifest.json  timing.json  zones.json
docs/: ARCHITECTURE.md  DATA_GOVERNANCE.md  MODEL_CARD.md  RESEARCH.md  RESULTS.md  app.js  index.html  login_bg.js  particles.js
docs/api/: calibration.json  emergence.json  junctions.json  model-metrics.json  patrol.json  priority.json  scenario.json  timeseries.json  weekly.json
scripts/: cv_demo.py  demo.py  get_cv_model.sh  profile_stdlib.py  refresh.sh
tests/: conftest.py  test_api.py  test_calibration.py  test_congestion.py  test_cv.py  test_emergence.py  test_features.py  test_forecast.py  test_patrol.py  test_scenario.py  test_spatial.py  test_timing.py  test_validate_geo.py
web/: manifest.webmanifest  operator.css  operator.js  styles.css  sw.js
