[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curbiq"
version = "1.0.0"
description = "AI platform on Bengaluru Traffic Police parking-violation data: detects illegal-parking hotspots, models their congestion impact, and prioritizes enforcement."
readme = { file = "docs/RESEARCH.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CurbIQ" }]
keywords = [
    "traffic",
    "parking-violations",
    "hotspot-detection",
    "spatial-statistics",
    "congestion",
    "enforcement",
    "bengaluru",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]

# Mirrors requirements.txt. Pinned floors only — see requirements-lock.txt for
# the fully reproducible, hash-free pinned set used to build the Docker image.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "shapely>=2.0",
    "h3>=4.0",
    "pyarrow>=15.0",
    "python-dateutil>=2.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "orjson>=3.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
# `curbiq-build` runs the full ETL -> analytics -> artifacts pipeline.
curbiq-build = "build_all:main"

[project.urls]
Documentation = "https://github.com/curbiq/curbiq/blob/main/docs/RESEARCH.md"

[tool.setuptools]
# build_all.py lives at the repo root as a top-level module (entry point above).
py-modules = ["build_all"]

[tool.setuptools.packages.find]
include = ["curbiq*"]
exclude = ["tests*", "scripts*", "web*", "docs*", "data*", "models*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
